@@ -179,7 +179,7 @@ static SHint shValidInputFloat2Int(VGfloat f)
  * integers and returns the value at given index
  *---------------------------------------------------*/
 
-static SHint shParamToInt(const void *values, SHint floats, SHint index)
+SHint shParamToInt(const void *values, SHint floats, SHint index)
 {
   if (floats)
     return shValidInputFloat2Int(((const VGfloat*)values)[index]);
@@ -192,7 +192,7 @@ static SHint shParamToInt(const void *values, SHint floats, SHint index)
  * floats and returns the value at given index
  *---------------------------------------------------*/
 
-static VGfloat shParamToFloat(const void *values, SHint floats, SHint index)
+VGfloat shParamToFloat(const void *values, SHint floats, SHint index)
 {
   if (floats)
     return shValidInputFloat(((const VGfloat*)values)[index]);
@@ -205,7 +205,7 @@ static VGfloat shParamToFloat(const void *values, SHint floats, SHint index)
  * integers and sets the value at given index
  *---------------------------------------------------*/
 
-static void shIntToParam(SHint i, SHint count, void *output, SHint floats, SHint index)
+void shIntToParam(SHint i, SHint count, void *output, SHint floats, SHint index)
 {
   if (index >= count)
     return;
@@ -220,7 +220,7 @@ static void shIntToParam(SHint i, SHint count, void *output, SHint floats, SHint
  * floats and sets the value at given index
  *----------------------------------------------------*/
 
-static void shFloatToParam(SHfloat f, SHint count, void *output, SHint floats, SHint index)
+void shFloatToParam(SHfloat f, SHint count, void *output, SHint floats, SHint index)
 {
   if (index >= count)
     return;
@@ -340,6 +340,10 @@ static void shSet(VGContext *context, VGParamType type, SHint count,
   case VG_SCISSORING:
     SH_RETURN_ERR_IF(count!=1, VG_ILLEGAL_ARGUMENT_ERROR, SH_NO_RETVAL);
     context->scissoring = bvalue;
+    if (bvalue)
+      shEnableScissoring(context);
+    else
+      shDisableScissoring(context);
     break;
     
   case VG_STROKE_LINE_WIDTH:
@@ -389,15 +393,7 @@ static void shSet(VGContext *context, VGParamType type, SHint count,
     
     /* TODO: limit by the VG_MAX_SCISSOR_RECTS value */
     SH_RETURN_ERR_IF(count % 4, VG_ILLEGAL_ARGUMENT_ERROR, SH_NO_RETVAL);
-    shRectArrayClear(&context->scissor);
-    for (i=0; i<count; i+=4) {
-      SHRectangle r;
-      r.x = shParamToFloat(values, floats, i+0);
-      r.y = shParamToFloat(values, floats, i+1);
-      r.w = shParamToFloat(values, floats, i+2);
-      r.h = shParamToFloat(values, floats, i+3);
-      shRectArrayPushBackP(&context->scissor, &r);
-    }
+    shBuildScissorContext(context, count, values, floats);
     
     break;
     
@@ -623,17 +619,8 @@ static void shGet(VGContext *context, VGParamType type, SHint count, void *value
     
     break;
   case VG_SCISSOR_RECTS:
-    
-    SH_RETURN_ERR_IF(count > context->scissor.size * 4,
+    SH_RETURN_ERR_IF(shCopyOutScissorParams(context, count, values, floats),
                      VG_ILLEGAL_ARGUMENT_ERROR, SH_NO_RETVAL);
-    
-    for (i=0; i<context->scissor.size; ++i) {
-      shIntToParam((SHint)context->scissor.items[i].x, count, values, floats, i*4+0);
-      shIntToParam((SHint)context->scissor.items[i].y, count, values, floats, i*4+1);
-      shIntToParam((SHint)context->scissor.items[i].w, count, values, floats, i*4+2);
-      shIntToParam((SHint)context->scissor.items[i].h, count, values, floats, i*4+3);
-    }
-    
     break;
     
   case VG_MAX_SCISSOR_RECTS:
